The ReactOS logo needs to be painted "transparently", as done in the "System" (sysdm) CPL.
See the userinit_screenshot.png for how it currently looks if a different window colouring is used.
- blocks
-
CORE-11323 Drawing mismatch at userinit LiveCD dialog
-
- Resolved
-
- relates to
-
CORE-2163 sysdm patch for using a masked ReactOS Logo, lights up a drawing bug
-
- Resolved
-
-
CORE-8071 sysdm: logo bitmap should be masked out with bitblt
-
- Resolved
-
-
CORE-10252 Audacity: black background for some toolbar icons
-
- Resolved
-