[USERINIT]: Paint the ReactOS logo transparently (with alpha channel), much like it's done in dll/cpl/sysdm/general.c . CORE-13527 #resolve This also fixes the drawing mismatch problem reported at CORE-11323 #resolve Finally, add a standard comctl32 manifest.

svn path=/branches/setup_improvements/; revision=75303