base/system/userinit/livecd.c
@@ -11,27 +11,80 @@ HWND hList;
 HWND hLocaleList;
 BOOL bSpain = FALSE;
 
+/*
+ * Taken and adapted from dll/cpl/sysdm/general.c
+ */
 static VOID
-InitImageInfo(PIMGINFO ImgInfo)
+InitLogo(PIMGINFO pImgInfo, HWND hwndDlg)
 {
-    BITMAP bitmap;
+    BITMAP logoBitmap;
+    BITMAP maskBitmap;
+    BITMAPINFO bmpi;
+    HDC hDC = GetDC(hwndDlg);
+    HDC hDCLogo = CreateCompatibleDC(NULL);
+    HDC hDCMask = CreateCompatibleDC(NULL);
+    HBITMAP hMask, hLogo, hAlphaLogo = NULL;
+    COLORREF *pBits;
+    INT line, column;
 
-    ZeroMemory(ImgInfo, sizeof(*ImgInfo));
+    ZeroMemory(pImgInfo, sizeof(*pImgInfo));
+    ZeroMemory(&bmpi, sizeof(bmpi));
 
-    ImgInfo->hBitmap = LoadImageW(hInstance,
-                                  MAKEINTRESOURCEW(IDB_ROSLOGO),
-                                  IMAGE_BITMAP,
-                                  0,
-                                  0,
-                                  LR_DEFAULTCOLOR);
+    hLogo = (HBITMAP)LoadImageW(hInstance, MAKEINTRESOURCEW(IDB_ROSLOGO), IMAGE_BITMAP, 0, 0, LR_DEFAULTCOLOR);
+    hMask = (HBITMAP)LoadImageW(hInstance, MAKEINTRESOURCEW(IDB_ROSMASK), IMAGE_BITMAP, 0, 0, LR_DEFAULTCOLOR);
 
-    if (ImgInfo->hBitmap != NULL)
+    if (hLogo != NULL && hMask != NULL)
     {
-        GetObject(ImgInfo->hBitmap, sizeof(bitmap), &bitmap);
+        GetObject(hLogo, sizeof(logoBitmap), &logoBitmap);
+        GetObject(hMask, sizeof(maskBitmap), &maskBitmap);
 
-        ImgInfo->cxSource = bitmap.bmWidth;
-        ImgInfo->cySource = bitmap.bmHeight;
+        if (logoBitmap.bmHeight != maskBitmap.bmHeight || logoBitmap.bmWidth != maskBitmap.bmWidth)
+            goto Cleanup;
+
+        bmpi.bmiHeader.biSize = sizeof(BITMAPINFO);
+        bmpi.bmiHeader.biWidth = logoBitmap.bmWidth;
+        bmpi.bmiHeader.biHeight = logoBitmap.bmHeight;
+        bmpi.bmiHeader.biPlanes = 1;
+        bmpi.bmiHeader.biBitCount = 32;
+        bmpi.bmiHeader.biCompression = BI_RGB;
+        bmpi.bmiHeader.biSizeImage = 4 * logoBitmap.bmWidth * logoBitmap.bmHeight;
+
+        /* Create a premultiplied bitmap */
+        hAlphaLogo = CreateDIBSection(hDC, &bmpi, DIB_RGB_COLORS, (PVOID*)&pBits, 0, 0);
+        if (!hAlphaLogo)
+            goto Cleanup;
+
+        SelectObject(hDCLogo, hLogo);
+        SelectObject(hDCMask, hMask);
+
+        for (line = logoBitmap.bmHeight - 1; line >= 0; line--)
+        {
+            for (column = 0; column < logoBitmap.bmWidth; column++)
+            {
+                COLORREF alpha = GetPixel(hDCMask, column, line) & 0xFF;
+                COLORREF Color = GetPixel(hDCLogo, column, line);
+                DWORD r, g, b;
+
+                r = GetRValue(Color) * alpha / 255;
+                g = GetGValue(Color) * alpha / 255;
+                b = GetBValue(Color) * alpha / 255;
+
+                *pBits++ = b | g << 8 | r << 16 | alpha << 24;
+            }
+        }
+
+        pImgInfo->hBitmap = hAlphaLogo;
+        pImgInfo->cxSource = logoBitmap.bmWidth;
+        pImgInfo->cySource = logoBitmap.bmHeight;
+        pImgInfo->iBits = logoBitmap.bmBitsPixel;
+        pImgInfo->iPlanes = logoBitmap.bmPlanes;
     }
+
+Cleanup:
+    DeleteObject(hMask);
+    DeleteObject(hLogo);
+    DeleteDC(hDCMask);
+    DeleteDC(hDCLogo);
 }
 
 
@@ -521,16 +574,19 @@ OnDrawItem(
         hdcMem = CreateCompatibleDC(lpDrawItem->hDC);
         if (hdcMem != NULL)
         {
+            static BLENDFUNCTION BlendFunc = {AC_SRC_OVER, 0, 255, AC_SRC_ALPHA};
+
             SelectObject(hdcMem, pState->ImageInfo.hBitmap);
-            BitBlt(lpDrawItem->hDC,
-                   left,
-                   lpDrawItem->rcItem.top,
-                   lpDrawItem->rcItem.right - lpDrawItem->rcItem.left,
-                   lpDrawItem->rcItem.bottom - lpDrawItem->rcItem.top,
-                   hdcMem,
-                   0,
-                   0,
-                   SRCCOPY);
+            GdiAlphaBlend(lpDrawItem->hDC,
+                          left,
+                          lpDrawItem->rcItem.top,
+                          pState->ImageInfo.cxSource,
+                          pState->ImageInfo.cySource,
+                          hdcMem,
+                          0, 0,
+                          pState->ImageInfo.cxSource,
+                          pState->ImageInfo.cySource,
+                          BlendFunc);
             DeleteDC(hdcMem);
         }
     }
@@ -754,7 +810,7 @@ VOID
 RunLiveCD(
     PSTATE pState)
 {
-    InitImageInfo(&pState->ImageInfo);
+    InitLogo(&pState->ImageInfo, NULL);
 
     while (pState->NextPage != DONE)
     {
